/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common;

/*
Config
*/
option java_package = "io.github.pnoker.api.common";
option java_outer_classname = "BaseProto";
option objc_class_prefix = "Common";
option java_multiple_files = true;

/*Base DTO*/
message GrpcBase {
  /*主键ID*/
  int64 id = 1;

  /*描述*/
  string remark = 2;

  /*创建者ID*/
  int64 creator_id = 3;

  /*创建者名称*/
  string creator_name = 4;

  /*创建时间*/
  int64 create_time = 5;

  /*操作者ID*/
  int64 operator_id = 6;

  /*操作者名称*/
  string operator_name = 7;

  /*操作时间*/
  int64 operate_time = 8;
}
